welcome.lessons.welcome.methods.basics.Methods.scala.code

def goAndGet() {while(!estSurBiscuit()){
	var nbpas=0;
	var dejafait=0;
	avance();
	nbpas=nbpas+1;
}
while(estSurBiscuit()){
prendBiscuit();
for(dejafait<- 0 to nbpas ){
	recule();
}
}
poseBiscuit();
}